--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,7 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@100..900&display=swap");
+
 @import "tailwindcss";
 @plugin "daisyui";
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", "Noto Sans Khmer", sans-serif;
+}
+
+/* Khmer text styling */
+.lang-khmer {
+  font-family: "Noto Sans Khmer", sans-serif;
+}
+
+/* English text styling */
+.lang-en {
+  font-family: "Roboto", sans-serif;
 }
